syntax = "proto3";

package golem.worker.v1;

import "golem/common/error_body.proto";
import "golem/worker/v1/worker_execution_error.proto";

message WorkerError {
  oneof error {
    golem.common.ErrorsBody bad_request = 1;
    golem.common.ErrorBody unauthorized = 2;
    golem.common.ErrorBody limit_exceeded = 3;
    golem.common.ErrorBody not_found = 4;
    golem.common.ErrorBody already_exists = 5;
    WorkerExecutionError internal_error = 6;
  }
}
